--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,10 +57,10 @@
         android:text="Login"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:id="@+id/button4"
+        android:id="@+id/btnLogin"
         app:layout_constraintHorizontal_weight="1"
         android:theme="@style/ThemeOverlay.MyDarkButton"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnSignup"
         app:layout_constraintLeft_toLeftOf="@+id/editText4" />
 
     <TextView
@@ -68,10 +68,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="17dp"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
-        app:layout_constraintRight_toRightOf="@+id/button3"
-        app:layout_constraintLeft_toLeftOf="@+id/button4"
-        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
+        app:layout_constraintRight_toRightOf="@+id/btnSignup"
+        app:layout_constraintLeft_toLeftOf="@+id/btnLogin"
         android:id="@+id/textView" />
 
     <com.facebook.login.widget.LoginButton
@@ -80,14 +79,14 @@
         android:layout_height="43dp"
         android:layout_marginTop="32dp"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/button4"
-        app:layout_constraintRight_toRightOf="@+id/button3"
+        app:layout_constraintLeft_toLeftOf="@+id/btnLogin"
+        app:layout_constraintRight_toRightOf="@+id/btnSignup"
         android:paddingTop="13dp"
         android:paddingBottom="13dp"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnSignup"
         android:layout_width="165dp"
         android:layout_height="wrap_content"
         android:text="Sign up"
@@ -98,14 +97,14 @@
         app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/btnSkip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="17dp"
         android:text="@string/skip"
-        android:layout_marginTop="64dp"
-        app:layout_constraintTop_toBottomOf="@+id/button_facebook_login"
         app:layout_constraintLeft_toLeftOf="@+id/button_facebook_login"
-        app:layout_constraintRight_toRightOf="@+id/button_facebook_login" />
+        app:layout_constraintRight_toRightOf="@+id/button_facebook_login"
+        android:layout_marginTop="55dp"
+        app:layout_constraintTop_toBottomOf="@+id/button_facebook_login" />
 
 </android.support.constraint.ConstraintLayout>
