--- a/app/src/main/res/layout/activity_createaccount.xml
+++ b/app/src/main/res/layout/activity_createaccount.xml
@@ -9,19 +9,16 @@
     <ImageView
         android:id="@+id/logo"
         style="@style/CustomLogoImageView"
-        android:contentDescription="@string/app_name"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintLeft_creator="1"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/app_name"
+        android:scaleType="centerCrop"
+        app:layout_constraintHorizontal_bias="0.54"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="24dp"
-        android:scaleType="center"
-        app:layout_constraintHorizontal_bias="0.54" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
 
     <EditText
@@ -33,10 +30,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:hint="Email"
         app:layout_constraintTop_toBottomOf="@+id/logo"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="64dp" />
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="56dp" />
 
     <EditText
         android:layout_width="0dp"
