--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,37 +11,35 @@
     <ImageView
         android:id="@+id/logo"
         style="@style/CustomLogoImageView"
-        android:contentDescription="@string/app_name"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintLeft_creator="1"
+        android:contentDescription="@string/app_name"
+        android:scaleType="centerCrop"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="24dp"
-        android:scaleType="center"
-        app:layout_constraintHorizontal_bias="0.52" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
 
     <EditText
-        android:layout_width="336dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
         android:id="@+id/editText2"
         android:hint="Email"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="32dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/logo"
+        app:layout_constraintHorizontal_bias="0.54" />
 
     <EditText
-        android:layout_width="336dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
@@ -54,13 +52,13 @@
         android:layout_marginTop="8dp" />
 
     <Button
-        android:text="Login"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
         android:id="@+id/btnLogin"
-        app:layout_constraintHorizontal_weight="1"
+        android:layout_width="145dp"
+        android:layout_height="wrap_content"
+        android:text="Login"
         android:theme="@style/ThemeOverlay.MyDarkButton"
         app:layout_constraintBaseline_toBaselineOf="@+id/btnSignup"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintLeft_toLeftOf="@+id/editText4" />
 
     <TextView
@@ -71,29 +69,30 @@
         app:layout_constraintTop_toBottomOf="@+id/btnLogin"
         app:layout_constraintRight_toRightOf="@+id/btnSignup"
         app:layout_constraintLeft_toLeftOf="@+id/btnLogin"
-        android:id="@+id/textView" />
+        android:id="@+id/textView"
+        android:layout_marginTop="8dp" />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/button_facebook_login"
-        android:layout_width="336dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/btnLogin"
+        android:layout_width="0dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="40dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintRight_toRightOf="@+id/btnSignup"
-        android:paddingTop="13dp"
-        android:paddingBottom="13dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintLeft_toLeftOf="@+id/btnLogin"
+        app:layout_constraintHorizontal_bias="1.0" />
 
     <Button
         android:id="@+id/btnSignup"
-        android:layout_width="165dp"
+        android:layout_width="145dp"
         android:layout_height="wrap_content"
         android:text="Sign up"
         android:theme="@style/ThemeOverlay.MyDarkButton"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintRight_toRightOf="@+id/editText4"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
     <TextView
