เพิ่มหน้า profile

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,11 @@
     tools:context="com.admin.gitframeapacas.FeedHomeFragment">
 
     <TextView
+        android:id="@+id/fHome"
+        android:layout_weight="10"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Home Fragment"/>
+        android:text="Home Fragment" />
+
+
 </LinearLayout>
