--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -8,7 +8,10 @@
 
 
     <TextView
+
+        android:id="@+id/fMap"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Map Fragment"/>
+
 </LinearLayout>
