--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#F44336</color>
     <color name="colorPrimaryDark">#B71C1C</color>
     <color name="colorAccent">#F44336</color>
+
+    <color name="black_overlay">#66000000</color>
+
+    <color name="colour_highlight_grey">#ff666666</color>
+    <color name="colour_dark_blue">#ff000066</color>
+    <color name="colour_dark_green">#ff006600</color>
+
 </resources>
