--- a/app/src/main/res/layout/item_histoy.xml
+++ b/app/src/main/res/layout/item_histoy.xml
@@ -10,22 +10,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ตลาดห้วยขวาง"
-        android:textSize="20dp"
+        android:textSize="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/weather"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintRight_toRightOf="@+id/weather"
+        app:layout_constraintLeft_toLeftOf="@+id/weather" />
 
     <TextView
         android:id="@+id/status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="อากาศดี"
-        android:textSize="20dp"
+        android:textSize="16dp"
 
-        app:layout_constraintBaseline_toBaselineOf="@+id/location"
-        android:layout_marginStart="64dp"
-        app:layout_constraintLeft_toRightOf="@+id/location" />
+        app:layout_constraintTop_toTopOf="@+id/weather"
+        android:layout_marginStart="80dp"
+        app:layout_constraintLeft_toRightOf="@+id/weather" />
 
+    <ImageView
+        android:id="@+id/weather"
+        android:layout_width="122dp"
+        android:layout_height="98dp"
+        app:srcCompat="@drawable/greenleaf"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+    <View
+        android:layout_width="368dp"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        tools:layout_editor_absoluteX="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/location" />
 
 </android.support.constraint.ConstraintLayout>
