--- a/app/src/main/res/layout/item_histoy.xml
+++ b/app/src/main/res/layout/item_histoy.xml
@@ -41,6 +41,7 @@
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"
         tools:layout_editor_absoluteX="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/location" />
+        app:layout_constraintTop_toBottomOf="@+id/location"
+        android:layout_marginTop="8dp" />
 
 </android.support.constraint.ConstraintLayout>
