--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,17 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.admin.gitframeapacas.FeedHomeFragment">
+    tools:context="com.admin.gitframeapacas.FeedHomeFragment"
+    android:weightSum="1">
 
     <TextView
-        android:id="@+id/fHome"
-        android:layout_weight="10"
+        android:layout_marginTop="10dp"
+        android:id="@+id/txt1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Home Fragment"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:gravity="center"/>
+
+
+    <pl.pawelkleczkowski.customgauge.CustomGauge
+        android:id="@+id/gauge"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-80dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        app:gaugeEndValue="100"
+        app:gaugePointEndColor="#e51c23"
+        app:gaugePointStartColor="#259b24"
+        app:gaugeStartAngle="180"
+        app:gaugeStartValue="0"
+        app:gaugePointSize="40"
+        app:gaugeStrokeCap="BUTT"
+        app:gaugeStrokeColor="#bdbdbd"
+        app:gaugeStrokeWidth="20dp"
+        app:gaugeSweepAngle="180"
+        app:gaugeDividerSize="1"
+        app:gaugeDividerColor="#ffeb3b"
+        app:gaugeDividerStep="10"
+        app:gaugeDividerDrawFirst="false"
+        app:gaugeDividerDrawLast="true"
+        />
+
+    <TextView
+        android:id="@+id/txt2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="AQI = 36"
+        android:textSize="15dp"
+        android:layout_gravity="center"
+        />
+    <View
+        android:layout_width="368dp"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        tools:layout_editor_absoluteX="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/img_recom"
+        android:layout_marginTop="16dp" />
+    <TextView
+        android:id="@+id/txt3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:text="คุณภาพอากาศ"
+        />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView_recom"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Home Fragment" />
+        tools:listitem="@layout/item_recommend"
+        android:layout_weight="1.22">
+
+    </android.support.v7.widget.RecyclerView>
 
 
-</LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ทดสอบ"
+        android:textSize="20dp"
+        />
+    </LinearLayout>
+</ScrollView>
