--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -11,7 +11,15 @@
 
         android:id="@+id/fMap"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Map Fragment"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Map Fragment"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:gravity="center"
+
+        />
+
+
 
 </LinearLayout>
