--- a/app/src/main/res/layout/item_histoy.xml
+++ b/app/src/main/res/layout/item_histoy.xml
@@ -11,10 +11,10 @@
         android:layout_height="wrap_content"
         android:text="ตลาดห้วยขวาง"
         android:textSize="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/weather"
-        android:layout_marginTop="16dp"
-        app:layout_constraintRight_toRightOf="@+id/weather"
-        app:layout_constraintLeft_toLeftOf="@+id/weather" />
+        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="25dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/status"
@@ -22,19 +22,10 @@
         android:layout_height="wrap_content"
         android:text="อากาศดี"
         android:textSize="16dp"
-
-        app:layout_constraintTop_toTopOf="@+id/weather"
-        android:layout_marginStart="80dp"
-        app:layout_constraintLeft_toRightOf="@+id/weather" />
-
-    <ImageView
-        android:id="@+id/weather"
-        android:layout_width="122dp"
-        android:layout_height="98dp"
-        app:srcCompat="@drawable/greenleaf"
-        android:layout_marginTop="16dp"
+        android:textColor="@color/colorPrimary"
+        android:layout_marginTop="52dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="200dp"
         app:layout_constraintLeft_toLeftOf="parent" />
     <View
         android:layout_width="368dp"
@@ -43,5 +34,28 @@
         tools:layout_editor_absoluteX="8dp"
         app:layout_constraintTop_toBottomOf="@+id/location"
         android:layout_marginTop="8dp" />
+
+    <pl.pawelkleczkowski.customgauge.CustomGauge
+        android:id="@+id/gauge"
+        android:layout_width="147dp"
+        android:layout_height="148dp"
+        android:layout_centerHorizontal="true"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        app:gaugeEndValue="100"
+        app:gaugePointEndColor="#F44336"
+        app:gaugePointStartColor="#8BC34A"
+        app:gaugeStartAngle="220"
+        app:gaugeStartValue="100"
+        app:gaugeStrokeCap="ROUND"
+        app:gaugeStrokeColor="#B2EBF2"
+        app:gaugePointSize="15"
+        app:gaugeStrokeWidth="10dp"
+        app:gaugeSweepAngle="100"
+        tools:layout_editor_absoluteY="16dp"
+        tools:layout_editor_absoluteX="4dp" />
+
 
 </android.support.constraint.ConstraintLayout>
