--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,101 +1,234 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.admin.gitframeapacas.FeedHomeFragment"
-    android:weightSum="1">
-
-    <TextView
-        android:layout_marginTop="10dp"
-        android:id="@+id/txt1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Home Fragment"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:gravity="center"/>
-
-
-    <pl.pawelkleczkowski.customgauge.CustomGauge
-        android:id="@+id/gauge"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="center"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="-80dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="10dp"
-        app:gaugeEndValue="100"
-        app:gaugePointEndColor="#e51c23"
-        app:gaugePointStartColor="#259b24"
-        app:gaugeStartAngle="180"
-        app:gaugeStartValue="0"
-        app:gaugePointSize="40"
-        app:gaugeStrokeCap="BUTT"
-        app:gaugeStrokeColor="#bdbdbd"
-        app:gaugeStrokeWidth="20dp"
-        app:gaugeSweepAngle="180"
-        app:gaugeDividerSize="1"
-        app:gaugeDividerColor="#ffeb3b"
-        app:gaugeDividerStep="10"
-        app:gaugeDividerDrawFirst="false"
-        app:gaugeDividerDrawLast="true"
-        />
-
-    <TextView
-        android:id="@+id/txt2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="AQI = 36"
-        android:textSize="15dp"
-        android:layout_gravity="center"
-        />
-    <View
-        android:layout_width="368dp"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        tools:layout_editor_absoluteX="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/img_recom"
-        android:layout_marginTop="16dp" />
-    <TextView
-        android:id="@+id/txt3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:text="คุณภาพอากาศ"
-        />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView_recom"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_recommend"
-        android:layout_weight="1.22">
+        android:orientation="vertical"
+        android:weightSum="1"
+        tools:context="com.admin.gitframeapacas.FeedHomeFragment">
 
-    </android.support.v7.widget.RecyclerView>
+        <TextView
+            android:id="@+id/txtLocation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:gravity="center"
+            android:text="Current location"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtDataBy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="Data collected by: Myself"
+            android:textSize="17dp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:id="@+id/txtStatus_sensor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="Sensor: Active"
+            android:textSize="17dp"
+            android:textStyle="normal" />
+
+        <pl.pawelkleczkowski.customgauge.CustomGauge
+            android:id="@+id/gauge"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:layout_marginBottom="-80dp"
+            android:layout_marginTop="30dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp"
+            app:gaugeDividerColor="#ffeb3b"
+            app:gaugeDividerDrawFirst="false"
+            app:gaugeDividerDrawLast="true"
+            app:gaugeDividerSize="1"
+            app:gaugeDividerStep="10"
+            app:gaugeEndValue="100"
+            app:gaugePointEndColor="#e51c23"
+            app:gaugePointSize="40"
+            app:gaugePointStartColor="#259b24"
+            app:gaugeStartAngle="180"
+            app:gaugeStartValue="0"
+            app:gaugeStrokeCap="BUTT"
+            app:gaugeStrokeColor="#bdbdbd"
+            app:gaugeStrokeWidth="20dp"
+            app:gaugeSweepAngle="180" />
+
+        <TextView
+            android:id="@+id/txt2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="AQI = 36"
+            android:textSize="15dp" />
 
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ทดสอบ"
-        android:textSize="20dp"
-        />
+
+            <pl.pawelkleczkowski.customgauge.CustomGauge
+                android:id="@+id/g_pm2.5"
+                android:layout_width="147dp"
+                android:layout_height="148dp"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:paddingBottom="0dp"
+                android:paddingTop="50dp"
+                app:gaugeEndValue="100"
+                app:gaugePointEndColor="#F44336"
+                app:gaugePointSize="20"
+                app:gaugePointStartColor="#8BC34A"
+                app:gaugeStartAngle="220"
+                app:gaugeStartValue="100"
+                app:gaugeStrokeCap="ROUND"
+                app:gaugeStrokeColor="#B2EBF2"
+                app:gaugeStrokeWidth="10dp"
+                app:gaugeSweepAngle="100"
+                tools:layout_editor_absoluteX="4dp"
+                tools:layout_editor_absoluteY="16dp" />
+
+
+            <pl.pawelkleczkowski.customgauge.CustomGauge
+                android:id="@+id/g_co"
+                android:layout_width="147dp"
+                android:layout_height="148dp"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:paddingBottom="00dp"
+                android:paddingTop="50dp"
+                app:gaugeEndValue="100"
+                app:gaugePointEndColor="#F44336"
+                app:gaugePointSize="15"
+                app:gaugePointStartColor="#8BC34A"
+                app:gaugeStartAngle="220"
+                app:gaugeStartValue="100"
+                app:gaugeStrokeCap="ROUND"
+                app:gaugeStrokeColor="#B2EBF2"
+                app:gaugeStrokeWidth="10dp"
+                app:gaugeSweepAngle="100"
+                tools:layout_editor_absoluteX="4dp"
+                tools:layout_editor_absoluteY="16dp" />
+
+            <pl.pawelkleczkowski.customgauge.CustomGauge
+                android:id="@+id/g_ho2"
+                android:layout_width="147dp"
+                android:layout_height="148dp"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:paddingBottom="0dp"
+                android:paddingTop="50dp"
+                app:gaugeEndValue="100"
+                app:gaugePointEndColor="#F44336"
+                app:gaugePointSize="15"
+                app:gaugePointStartColor="#8BC34A"
+                app:gaugeStartAngle="220"
+                app:gaugeStartValue="100"
+                app:gaugeStrokeCap="ROUND"
+                app:gaugeStrokeColor="#B2EBF2"
+                app:gaugeStrokeWidth="10dp"
+                app:gaugeSweepAngle="100"
+                tools:layout_editor_absoluteX="4dp"
+                tools:layout_editor_absoluteY="16dp" />
+
+            <pl.pawelkleczkowski.customgauge.CustomGauge
+                android:id="@+id/g_so2"
+                android:layout_width="147dp"
+                android:layout_height="148dp"
+                android:layout_centerHorizontal="true"
+                android:layout_weight="1"
+                android:paddingBottom="00dp"
+                android:paddingTop="50dp"
+                app:gaugeEndValue="100"
+                app:gaugePointEndColor="#F44336"
+                app:gaugePointSize="15"
+                app:gaugePointStartColor="#8BC34A"
+                app:gaugeStartAngle="220"
+                app:gaugeStartValue="100"
+                app:gaugeStrokeCap="ROUND"
+                app:gaugeStrokeColor="#B2EBF2"
+                app:gaugeStrokeWidth="10dp"
+                app:gaugeSweepAngle="100"
+                tools:layout_editor_absoluteX="4dp"
+                tools:layout_editor_absoluteY="16dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="20"
+                android:textSize="20dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="20"
+                android:textSize="20dp" />
+
+
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="368dp"
+            android:layout_height="1dp"
+            android:layout_marginTop="16dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintTop_toBottomOf="@+id/img_recom"
+            tools:layout_editor_absoluteX="8dp" />
+
+        <TextView
+            android:id="@+id/txt3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:text="คุณภาพอากาศ"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView_recom"
+            android:layout_width="match_parent"
+            android:layout_height="453dp"
+            tools:listitem="@layout/item_recommend">
+
+        </android.support.v7.widget.RecyclerView>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ทดสอบ"
+            android:textSize="20dp" />
     </LinearLayout>
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
