--- a/app/src/main/res/layout/item_histoy.xml
+++ b/app/src/main/res/layout/item_histoy.xml
@@ -2,38 +2,40 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="80dp"
         android:text="ตลาดห้วยขวาง"
         android:textSize="16dp"
-        android:layout_marginTop="80dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="25dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="อากาศดี"
-        android:textSize="16dp"
-        android:textColor="@color/colorPrimary"
-        android:layout_marginTop="52dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="200dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="52dp"
+        android:text="อากาศดี"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <View
         android:layout_width="368dp"
         android:layout_height="1dp"
+        android:layout_marginTop="8dp"
         android:background="@android:color/darker_gray"
-        tools:layout_editor_absoluteX="8dp"
         app:layout_constraintTop_toBottomOf="@+id/location"
-        android:layout_marginTop="8dp" />
+        tools:layout_editor_absoluteX="8dp" />
 
     <pl.pawelkleczkowski.customgauge.CustomGauge
         android:id="@+id/gauge"
@@ -46,16 +48,16 @@
         android:paddingTop="10dp"
         app:gaugeEndValue="100"
         app:gaugePointEndColor="#F44336"
+        app:gaugePointSize="15"
         app:gaugePointStartColor="#8BC34A"
         app:gaugeStartAngle="220"
         app:gaugeStartValue="100"
         app:gaugeStrokeCap="ROUND"
         app:gaugeStrokeColor="#B2EBF2"
-        app:gaugePointSize="15"
         app:gaugeStrokeWidth="10dp"
         app:gaugeSweepAngle="100"
-        tools:layout_editor_absoluteY="16dp"
-        tools:layout_editor_absoluteX="4dp" />
+        tools:layout_editor_absoluteX="4dp"
+        tools:layout_editor_absoluteY="16dp" />
 
 
 </android.support.constraint.ConstraintLayout>
