--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btnLogin"
         app:layout_constraintRight_toRightOf="@+id/btnSignup"
         app:layout_constraintLeft_toLeftOf="@+id/btnLogin"
-        android:id="@+id/textView"
+        android:id="@+id/btnReset"
         android:layout_marginTop="8dp" />
 
     <com.facebook.login.widget.LoginButton
@@ -80,7 +80,7 @@
         android:layout_marginTop="40dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/btnReset"
         app:layout_constraintRight_toRightOf="@+id/btnSignup"
         app:layout_constraintLeft_toLeftOf="@+id/btnLogin"
         app:layout_constraintHorizontal_bias="1.0" />
