--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
         android:id="@+id/btnReset"
         android:layout_marginTop="8dp" />
 
-    <com.facebook.login.widget.LoginButton
+   <!-- <com.facebook.login.widget.LoginButton
         android:id="@+id/button_facebook_login"
         android:layout_width="0dp"
         android:layout_height="37dp"
@@ -83,7 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btnReset"
         app:layout_constraintRight_toRightOf="@+id/btnSignup"
         app:layout_constraintLeft_toLeftOf="@+id/btnLogin"
-        app:layout_constraintHorizontal_bias="1.0" />
+        app:layout_constraintHorizontal_bias="1.0" />-->
 
     <Button
         android:id="@+id/btnSignup"
@@ -95,16 +95,5 @@
         app:layout_constraintRight_toRightOf="@+id/editText4"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/editText4" />
-
-    <TextView
-        android:id="@+id/btnSkip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="17dp"
-        android:text="@string/skip"
-        app:layout_constraintLeft_toLeftOf="@+id/button_facebook_login"
-        app:layout_constraintRight_toRightOf="@+id/button_facebook_login"
-        android:layout_marginTop="55dp"
-        app:layout_constraintTop_toBottomOf="@+id/button_facebook_login" />
 
 </android.support.constraint.ConstraintLayout>
