--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -16,7 +16,6 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout="@layout/frame_search"
         tools:layout_editor_absoluteX="0dp" />
-
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="0dp"
@@ -26,6 +25,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@+id/searchfragment"
         app:layout_constraintTop_toTopOf="@+id/searchfragment" />
+
+    <include layout="@layout/floating" />
 
     <devlight.io.library.ntb.NavigationTabBar
         android:id="@+id/ntb_horizontal"
