--- a/app/src/main/res/layout/frame_search.xml
+++ b/app/src/main/res/layout/frame_search.xml
@@ -9,7 +9,7 @@
 
 
     <com.arlib.floatingsearchview.FloatingSearchView
-        android:id="@+id/floating_search_view"
+        android:id="@+id/search_district"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:floatingSearch_close_search_on_keyboard_dismiss="true"
@@ -19,6 +19,25 @@
         app:floatingSearch_searchBarMarginRight="5dp"
         app:floatingSearch_searchBarMarginTop="5dp"
         app:floatingSearch_searchHint="Search your district..."
+        app:floatingSearch_showSearchKey="false"
+        app:floatingSearch_suggestionsListAnimDuration="250"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
+
+    </com.arlib.floatingsearchview.FloatingSearchView>
+
+    <com.arlib.floatingsearchview.FloatingSearchView
+        android:id="@+id/search_navigate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:floatingSearch_close_search_on_keyboard_dismiss="true"
+        app:floatingSearch_leftActionMode="showHome"
+        app:floatingSearch_menu="@menu/menu_main"
+        app:floatingSearch_searchBarMarginLeft="5dp"
+        app:floatingSearch_searchBarMarginRight="5dp"
+        app:floatingSearch_searchBarMarginTop="5dp"
+        app:floatingSearch_searchHint="Navigate to..."
         app:floatingSearch_showSearchKey="false"
         app:floatingSearch_suggestionsListAnimDuration="250"
         tools:layout_editor_absoluteX="8dp"
