--- a/app/src/main/res/layout/activity_gas.xml
+++ b/app/src/main/res/layout/activity_gas.xml
@@ -2,44 +2,21 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".GraphGasActivity">
 
-    <com.jjoe64.graphview.GraphView
-        android:layout_width="0dp"
+    <org.eazegraph.lib.charts.ValueLineChart xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cubiclinechart"
+        android:layout_width="344dp"
         android:layout_height="200dp"
-        android:id="@+id/graph"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnAddSeries"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="109dp"
-        android:layout_marginTop="32dp"
-        android:text="Button"
-        app:layout_constraintLeft_toLeftOf="@+id/graph"
-        app:layout_constraintTop_toBottomOf="@+id/graph"
-        tools:layout_constraintLeft_creator="1" />
-
-    <Button
-        android:id="@+id/btnClearSeries"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Button"
-        app:layout_constraintLeft_toLeftOf="@+id/graph"
-        app:layout_constraintTop_toBottomOf="@+id/btnAddSeries"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginStart="104dp" />
-
-
+        app:egCurveSmoothness="0.4"
+        app:egIndicatorLineColor="#FE6DA8"
+        app:egLegendHeight="40dp"
+        app:egShowStandardValue="true"
+        app:egUseCubic="true"
+        app:egUseOverlapFill="true"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="0dp" />
 </android.support.constraint.ConstraintLayout>
