--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -26,7 +26,7 @@
         app:layout_constraintRight_toRightOf="@+id/searchfragment"
         app:layout_constraintTop_toTopOf="@+id/searchfragment" />
 
-    <include layout="@layout/floating" />
+    <include layout="@layout/floating_other_district" />
 
     <devlight.io.library.ntb.NavigationTabBar
         android:id="@+id/ntb_horizontal"
