--- a/app/src/main/res/layout/frame_search.xml
+++ b/app/src/main/res/layout/frame_search.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         app:floatingSearch_close_search_on_keyboard_dismiss="true"
-        app:floatingSearch_leftActionMode="showHome"
+        app:floatingSearch_leftActionMode="noLeftAction"
         app:floatingSearch_menu="@menu/menu_main"
         app:floatingSearch_searchBarMarginLeft="5dp"
         app:floatingSearch_searchBarMarginRight="5dp"
